[project]
name = "PAUS_cutouts"
version = "0.0.1"
authors = [
  { name="Alberto Torralba", email="alberto.torralba@uv.es" },
]
description = "Package to get PAUS cutout images."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/totoal/PAUS_cutouts"
